@startuml
class Product {
  - id: String
  - name: String
  - price: double
  - isVerified: boolean
}

class Order {
  - orderId: String
  - products: List<Product>
  - isProcessed: boolean
}

class Invoice {
  - invoiceId: String
  - orderId: String
  - totalAmount: double
}

class StoreService {
  + calculateOrderTotal(order: Order): double
  + generateInvoice(order: Order): Invoice
}

class ProductVerificationThread extends Thread {
  - products: List<Product>
  + run(): void
}

class OrderProcessingTask implements Runnable {
  - orders: List<Order>
  - storeService: StoreService
  - generatedInvoices: List<Invoice>
  + run(): void
}

OrderProcessingTask --> StoreService
OrderProcessingTask --> Order
OrderProcessingTask --> Invoice
ProductVerificationThread --> Product
@enduml